css/screen.css
body {
  color: #222;
  font-family: "chaparral-pro", serif;
  font-weight: 400;
  font-size: 14pt;
  line-height: 1.4em;
  margin: 0 5%;
  min-width: 25em;
  max-width: 40em;
}

a {
  color: #222;
  text-decoration: none;
  border-bottom: 1px solid;
}
a:visited { border-bottom: 1px solid #AAA; }
a:hover, a:visited:hover { border-bottom: 1px solid transparent; }
a.image { border-bottom: 0; }

@media (prefers-color-scheme: dark) {
  body {
    background-color: black;
    color: #DDD;
  }

  a {
    color: #DDD;
    border-color: #DDD;
  }
}

h1, h2, h3, h4 {
  font-family: "p22-underground", sans-serif;
  font-weight: 600;
  line-height: 1.5em;
  margin-bottom: 0.3em;
}

h3.subtitle {
  margin-top: -0.3em;
}

.clear { clear: both; }


#header {
  margin: 0 1em 2em 1em;
}

#content {
  margin: 0 4em;
}

#footer {
  margin: 6em 4em 3em 4em;
  font-size: 70%;
  text-align: right;
}


/** Posts list page **/
h2.year {
  margin-top: 0;
}

.posts {
  margin: 0 0 2em 0;
  padding: 0;
  list-style: none outside;
  position: relative;
}

.posts li {
  line-height: 1.25em;
  clear: left;
}

.posts .post-date {
  position: absolute;
  left: 0;
  font-family: "Operator Mono SSm Book", Menlo, Monaco, monospace;
  font-size: 12pt;
}

.posts .post-name {
  float: left;
  margin-left: 5em;
  padding-bottom: 0.5em;
}


/** Post show page **/
.post-date {
  float: right;
  margin: 0;
}

.post-title {
  clear: right;
}

.last-post {
  float: left;
}

.next-post {
  float: right;
}

.callout {
  display: block;
  background-color: #F2F2F2;
  padding: 10px 15px;
}


code {
  background-color: #F2F2F2;
  font-size: 80%;
}

pre {
  overflow: hidden;
  background-color: #F2F2F2;
  padding: 10px;
  line-height: 1.0em;
}

pre code {
  background-color: transparent;
  overflow-x: auto; /* Use horizontal scroller if needed; for Firefox 2, not needed in Firefox 3 */
  white-space: pre-wrap; /* css-3 */
  white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
  white-space: -pre-wrap; /* Opera 4-6 */
  white-space: -o-pre-wrap; /* Opera 7 */
  width: 99%;
  word-wrap: break-word; /* Internet Explorer 5.5+ */
}

.gist {
  font-size: 12px;
}

small, .aside {
  font-size: 70%;
  display: inline-block;
  line-height: 1.4;
}

#content img {
  width: 100%;
}


/* Talks page */

.talk-title {
  font-family: "p22-underground", sans-serif;
  font-weight: 600;
  margin-left: 0;
  margin-top: 1em;
  clear: both;
}

.talk-info {
  padding-left: 40px;
  font-size: 12pt;
  line-height: 1.25em;
}

.talk-description {
  margin-bottom: 0;
}

.talk-post {
  display: inline-block;
  margin-top: 1em;
}

ul.talk-events {
  list-style-type: none;
  margin-top: 1.5em;
  padding: 0;
}

.talk-event {
  clear: both;
}

.talk-event-date {
  float: left;
  clear: left;
  margin-right: 1em;
  font-family: "Operator Mono SSm Book", Menlo, Monaco, monospace;
  font-size: 12pt;
  margin-top: -1px;
}

.talk-event-name {
  float: left;
}

.talk-event-slides, .talk-event-video {
  display: block-inline;
  margin-left: 1.5em;
  margin-right: 0;
  font-size: 10pt;
}

.group:after {
  content: "";
  display: table;
  clear: both;
}

